--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule ".vim/bundle/funcoo"]
 	path = .vim/bundle/funcoo
 	url = https://github.com/rizzatti/funcoo.vim.git
+[submodule ".vim/bundle/dash"]
+	path = .vim/bundle/dash
+	url = https://github.com/rizzatti/dash.vim.git
